--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ documentation = "https://docs.rs/datetimeparse"
 version = "0.3.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[workspace]
+members = ["datetimeparse-capi"]
 
 [dependencies]
 chrono = { version = "^0.4", optional = true }
