--- a/datetimeparse-capi/Cargo.toml
+++ b/datetimeparse-capi/Cargo.toml
@@ -3,6 +3,7 @@ name = "datetimeparse-capi"
 version = "0.1.0"
 license = "EUPL"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
